[package]
name = "weih"
version = "0.0.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.10"
mlmd = "0.2"
serde =  { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["macros"] }
